--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.11",
     "@tanstack/react-query": "^4.26.0",
     "@tanstack/react-query-devtools": "^4.26.0",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "framer-motion": "^10.0.2",
@@ -22,14 +23,14 @@
     "react-dom": "^18.2.0",
     "react-if": "^4.1.4",
     "react-router-dom": "^6.8.2",
-    "superagent": "^8.0.9",
+    "react-use": "^17.4.0",
+    "swiper": "^9.1.0",
     "zod": "^3.21.0",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/superagent": "^4.1.16",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "5.0.0-beta",
     "vite": "^4.1.0",
