--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-use": "^17.4.0",
     "swiper": "^9.1.0",
     "zod": "^3.21.0",
+    "zod-formik-adapter": "^1.2.0",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
