--- a/server/composer.json
+++ b/server/composer.json
@@ -12,7 +12,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "php-ffmpeg/php-ffmpeg": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
